--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -51,7 +51,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/round_shpae_blue10e7dc"
-        android:fontFamily="cursive"
+        android:fontFamily="@font/nyala"
         android:minWidth="0dp"
         android:minHeight="0dp"
         android:paddingTop="@dimen/_4sdp"
@@ -74,7 +74,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="cursive"
+        android:fontFamily="@font/nyala"
         android:text="Or"
         android:textColor="@color/WhiteFFFFFF"
         android:textSize="@dimen/_18ssp"
@@ -91,7 +91,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/round_strokeonly_whiteffffff"
-        android:fontFamily="cursive"
+        android:fontFamily="@font/nyala"
         android:gravity="center"
         android:minWidth="0dp"
         android:minHeight="0dp"
