--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_blue"
+    android:background="@drawable/polywall_white"
     tools:context=".activities.HomeActivity">
 
     <android.support.v7.widget.Toolbar
@@ -18,12 +18,11 @@
             android:id="@+id/toolbar_title_TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="cursive"
+            android:fontFamily="@font/nyala"
             android:gravity="center"
             android:text="What's the Plan (admin)"
             android:textColor="@color/WhiteFFFFFF"
-            android:textSize="@dimen/_20ssp"
-            android:textStyle="bold" />
+            android:textSize="@dimen/_20ssp"/>
 
     </android.support.v7.widget.Toolbar>
 
