--- a/app/src/main/res/layout/activity_new_event_2.xml
+++ b/app/src/main/res/layout/activity_new_event_2.xml
@@ -2,38 +2,38 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/gradient_blue"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_blue"
     tools:context=".activities.NewEventSecondActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark">
+        android:background="@color/colorPrimaryDark"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/toolbar_title_TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="cursive"
+            android:fontFamily="@font/nyala"
             android:gravity="center"
             android:text="New Event"
-            android:textStyle="bold"
             android:textColor="@color/WhiteFFFFFF"
-            android:textSize="@dimen/_20ssp" />
-
+            android:textSize="@dimen/_20ssp"
+            android:textStyle="bold"/>
     </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="@dimen/_10sdp"
+        app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="@dimen/_10sdp"
         app:cardElevation="@dimen/_3sdp"
         app:contentPadding="@dimen/_10sdp"
-        app:cardBackgroundColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/toolbar"
@@ -57,8 +57,8 @@
                 android:inputType="textPersonName"
                 android:padding="@dimen/_10sdp"
                 android:textColor="@color/Black000000"
-                android:textSize="@dimen/_14ssp"
                 android:textColorHint="@color/GreyCDCDCD"
+                android:textSize="@dimen/_14ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
